--- a/orderservice/src/main/resources/application.properties
+++ b/orderservice/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=order-service
 server.port=8092
-#spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.q17e8.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=BookStore
-spring.data.mongodb.repositories.enabled=true
+spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.q17e8.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=BookStore
+#spring.data.mongodb.repositories.enabled=true
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
