--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.3.4",
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -10,14 +11,17 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
+    "formik": "^2.2.6",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^6.15.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "simple-react-footer": "^1.0.2",
     "styled-components": "^5.3.0",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
