Exception handling updated

--- a/orderservice/src/main/resources/application.properties
+++ b/orderservice/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.q17e8.mongodb.net/myF
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
